--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "lit": "^2.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remote-app": "C:\\projects\\UI\\mf-remote-react-as-wc\\remote-app-v1.0.4.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -16,8 +17,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "css-loader": "^5.1.2",
-    "style-loader": "^3.0.0",
     "html-webpack-plugin": "^4.0.0",
+    "style-loader": "^3.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.0.0"
